# buttonbinds

./: Cargo.toml  README.md
config/: azufight.json  batfan.json  cpw2.json  fm2k_default.json  fm2k_default_linux.json  fm2k_default_windows.json  fm95_default.json  fm95_default_linux.json  fm95_default_windows.json  hinokakera.json  qoh99.json  touhou3.json  touhou3_linux.json  touhou3_windows.json  wanwan.json  wanwan_linux.json  wanwan_windows.json
src/: config.rs  main.rs
