[package]
name = "buttonbinds"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
enigo = {version = "0.2.1", features = ["wayland"]} # need to make sure this does not mess up x support
sdl2 = {version = "0.37.0", features = ["static-link", "bundled"]}

