[package]
name = "buttonbinds"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
enigo = { git = "https://github.com/enigo-rs/enigo.git", rev= "4bbaee5", features = ["wayland", "x11rb", "serde"]} # need to make sure this does not mess up x support
sdl2 = {version = "0.37.0", features = ["static-link", "bundled"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

